# haruwaiku-bot-rs

./: Cargo.toml  Dockerfile  README.md  compose.yml  example.env
.github/workflows/: build.yml  deploy.yml
.zed/: debug.json
src/: main.rs
src/commands/: mod.rs  nuke.rs  ping.rs  reminder.rs  slowmode.rs  translate.rs  xlinkconvert.rs
src/events/: mod.rs  on_ready.rs
src/reminder/: mod.rs  model.rs  task.rs  utils.rs
